# score-addon-ble

./: .gitmodules  CMakeLists.txt  README.md  addon.json  ble.cmake  release.sh  score_addon_ble.cpp  score_addon_ble.hpp
BLE/: BLEDevice.cpp  BLEDevice.hpp  BLEProtocolFactory.cpp  BLEProtocolFactory.hpp  BLEProtocolSettingsWidget.cpp  BLEProtocolSettingsWidget.hpp  BLESpecificSettings.hpp  BLESpecificSettingsSerialization.cpp  Protocol.cpp  Protocol.hpp
